--- a/Movies/wwwroot/css/site.css
+++ b/Movies/wwwroot/css/site.css
@@ -1,2 +1,52 @@
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
 for details on configuring this project to bundle and minify static web assets. */
+
+.container{
+    display: flex;
+    flex-direction: row;
+}
+
+form{
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+}
+
+h2{
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
+.movie-entry{
+    border-bottom: 1px dashed gray;
+    padding-bottom: 10px;
+}
+
+.genre{
+    color: coral;
+}
+
+.director{
+    color: forestgreen;
+}
+
+.rating{
+    color: darkmagenta;
+}
+
+.ratings{
+    display: flex;
+    flex-direction: row;
+}
+
+.ratings > div{
+    width: 100px;
+    border: 1px solid gray;
+    color: gray;
+    text-align: center;
+}
+
+.ratings > div > span{
+    display: block;
+    height: 20px;
+}
