--- a/Movies/wwwroot/css/site.css
+++ b/Movies/wwwroot/css/site.css
@@ -4,12 +4,33 @@ for details on configuring this project to bundle and minify static web assets. 
 .container{
     display: flex;
     flex-direction: row;
+    margin: 50px 50px 50px 50px;
+    vertical-align: central;
+}
+
+body{
+    background-color: black;
+}
+
+.main{
+    margin: auto;
+    background-color: white;
+    height: 100%;
+    width: 80%;
 }
 
 form{
-    background-color: gray;
     display: flex;
     flex-direction: column;
+    background-color: gray;
+    height: 180px;
+    width: 200px;
+    padding: 20px 20px 20px 20px;
+    margin-left: 50px;
+}
+
+h1{
+    text-align: center;
 }
 
 h2{
