--- a/Movies/wwwroot/css/site.css
+++ b/Movies/wwwroot/css/site.css
@@ -19,14 +19,14 @@ body{
     width: 80%;
 }
 
-form{
+#search-and-filter-form{
     display: flex;
     flex-direction: column;
     background-color: gray;
     height: 180px;
     width: 200px;
     padding: 20px 20px 20px 20px;
-    margin-left: 50px;
+    margin-left: 30px;
 }
 
 h1{
